--- a/webpack-demo/src/style.css
+++ b/webpack-demo/src/style.css
@@ -1,6 +1,80 @@
 body {
-    background-color: rgb(110, 61, 0);
+  font-family: "Open Sans", "Lucida Grande", tahoma, verdana, arial, sans-serif;
 }
-.hello {
-    color: red;
-  }
+
+ul {
+  padding-left: 0;
+  list-style: none;
+}
+.container {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+
+.list ul {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 5%;
+  box-shadow: 0px 0 8px rgb(0 0 0 / 15%);
+  margin: 0;
+}
+
+.list ul li {
+  font-size: 1rem;
+  font-weight: 300;
+  text-align: left;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  border-top: 1px solid rgba(0, 0, 0, 0.08);
+  padding: 20px 20px 20px 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.list ul li:nth-child(1) {
+  border-top: none;
+}
+
+.check-input {
+  position: relative;
+  left: -1rem;
+}
+
+label {
+  width: 90%;
+  height: fit-content;
+}
+
+i {
+  color: rgb(139, 137, 137);
+  position: relative;
+  left: 1rem;
+}
+
+button {
+  background-color: #fff;
+  padding: 15px 63px 15px 63px;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  display: block;
+  box-shadow: 0px 2px 8px rgb(0 0 0 / 15%);
+}
+
+.add-input {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  box-shadow: 0px -3px 8px rgb(0 0 0 / 15%);
+  padding: 20px 20px 20px 20px;
+  font-size: 20px;
+}
