--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ ul {
   padding-left: 0;
   list-style: none;
 }
+
 .container {
   width: 60%;
   display: flex;
@@ -24,7 +25,7 @@ ul {
   display: flex;
   flex-direction: column;
   padding: 20px 5%;
-  box-shadow: 0px 0 8px rgb(0 0 0 / 15%);
+  box-shadow: 0 0 8px rgb(0 0 0 / 15%);
   margin: 0;
 }
 
@@ -51,7 +52,6 @@ ul {
 
 label {
   width: 90%;
-  height: fit-content;
 }
 
 i {
@@ -66,15 +66,14 @@ button {
   width: 100%;
   outline: none;
   border: none;
-  background-color: transparent;
   display: block;
-  box-shadow: 0px 2px 8px rgb(0 0 0 / 15%);
+  box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
 }
 
 .add-input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-  box-shadow: 0px -3px 8px rgb(0 0 0 / 15%);
+  box-shadow: 0 -3px 8px rgb(0 0 0 / 15%);
   padding: 20px 20px 20px 20px;
   font-size: 20px;
 }
